# active-listener

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  justfile
.cursor/rules/: code-quality.mdc  project-structure.mdc  test-coverage.mdc
scripts/: build-cross.sh  release.sh  version-bump.sh
src/: audio.rs  diarize.rs  lib.rs  main.rs  markdown.rs  summarize.rs  system_audio.rs  transcribe.rs
src/whisper/: mod.rs  multilingual.rs
tests/: 2026-04-08_165818.md  2026-04-20_102511.md
